--- a/package.json
+++ b/package.json
@@ -64,12 +64,15 @@
         "rollup-plugin-typescript2": "^0.29.0",
         "ts-jest": "^26.5.0",
         "ts-node": "^9.1.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.6.4"
     },
     "dependencies": {
+        "@microsoft/tsdoc": "^0.14.1",
         "@types/node": "^15.12.2",
+        "colors": "^1.4.0",
         "fs-extra": "^10.1.0",
         "minimist": "^1.2.6",
-        "normalize-path": "^3.0.0"
+        "normalize-path": "^3.0.0",
+        "tslib": "^2.4.0"
     }
 }
